2010-09-22  Henrik Sandklef  <hesa@sandklef.com>

	* configure.in: 
	Updated version to 3.06.90 to prepare for 3.07

	* libxnee/src/xnee_fake.c (xnee_replay_event_handler): 
	Indentation fix 	
	
	* libxnee/src/xnee_range.c: 
	Changed "WARNING" to "NOTIFICATION" in warning text 

	* libxnee/src/xnee_session.c (xnee_rep_prepare): 
	Added extra call (for second call of fun :( )  to
	xnee_setup_display
	Continuing if XNEE_OK returned from xnee_replay_main_loop
	
	* libxnee/src/xnee_record.c: 
	Enabled recording even if screen < 0
	Added print of xnee_data and control dpy in fprintf statement

	* libxnee/src/xnee_replay.c: 
	Removed printf statements
	changed a printf into a fprintf(stderr,

	* libxnee/src/xnee_session.c: 
	xnee_setup_display called earlier (N900 fix)

	* libxnee/src/xnee_xinput.c: 
	Updated (c) year
	changed a printf into a fprintf

2010-09-18  Henrik Sandklef  <hesa@sandklef.com>

	* xswine/main.c: 
	Major rewrite, fprintf and flush to swmouse devs

2010-09-14  Henrik Sandklef  <hesa@sandklef.com>

	* build/maemo.sh: 
	Removed unused old settings
	Re-enabled clean target

2010-09-13  Henrik Sandklef  <hesa@sandklef.com>

	* build/maemo.sh: 
	New file to build Xnee for N900, 
	  (very specific settings)

	* libxnee/src/xnee_utils.c (xnee_record_from_data_display): 
	Added support for handling N900 X servers

2010-09-09  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/include/libxnee/xnee.h:
        Removed hard coded #define of XNEE_XINPUT_SUPPORT

	* libxnee/include/libxnee/xnee_xinput.h: 
	Modified (c) year (only 2010)
	Include libxnee/xnee.h alwas done

2010-09-08  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/include/libxnee/xnee_xinput.h: 
	Moved function prototypes outside xinput ifdef

	* libxnee/src/xnee_alloc.c (xnee_free_recordext_setup): 
	free code placed inside NULL checks instead of separate NULL checks

	* libxnee/src/xnee_record.c (xnee_record_handle_event_printer): 
	Discarding motion event if no screen presented
